# ClangQL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-artifacts.yaml  build-x64-linux.yaml
src/: ClangQLModule.cc  ClangQLModule.hpp  IResultStream.hpp  Index.grpc.pb.cc  Index.grpc.pb.h  Index.pb.cc  Index.pb.h  Module.cc  Module.hpp  RefsTable.cc  RefsTable.hpp  RelationsTable.cc  RelationsTable.hpp  Service.grpc.pb.cc  Service.grpc.pb.h  Service.pb.cc  Service.pb.h  SymbolsTable.cc  SymbolsTable.hpp  VirtualTable.cc  VirtualTable.hpp  VirtualTableCursor.hpp  clangql.cc
